--- a/CSS - Net Ninja/css/syntax.css
+++ b/CSS - Net Ninja/css/syntax.css
@@ -7,11 +7,9 @@
 
 
 
-
-
 /*
+___________________________________
 CSS LESSON 17:
-
 #all-articles h2 + p{
     color:green;
 }
@@ -75,6 +73,174 @@ article p:last-of-type{
 }
 ______________________________________
 CSS LESSON 23: 
+li:nth-child(1), li:nth-child(7){
+    font-weight: bold;
+}
+
+li:nth-child(even){
+    background: grey;
+}
+
+li:nth-child(odd){
+    background: pink;
+}
+
+li:nth-child(3n + 1){
+    color:red;
+}
+_________________________________________
+CSS LESSON 24:
+article:nth-child(2){
+    background: grey;
+}
+article:nth-of-type(2){
+    background: pink
+}
+
+article:nth-of-type(odd){
+    background: red;
+}
+article:nth-of-type(2n+2){
+    background:blue;
+}
+__________________________________________
+CSS LESSON 25: 
+article.featured-content{
+    background: red;
+}
+
+div.featured-content{
+    background: blue;
+}
+___________________________________________
+CSS LESSON 26: 
+*{
+    margin: 0;
+    padding: 0;
+    color: red;
+}
+____________________________________________
+CSS LESSON 27: 
+
+h1{
+    font-size: 48px;
+}
+
+h2{
+    font-size: 32px;
+}
+
+p{
+    font-size: 16px;
+}
+
+article{
+    font-size: 16px;
+}
+
+article h2{
+    font-size: 4em;
+}
+
+p{
+    font-size: 200%;
+}
+___________________________________________
+CSS LESSON 28: 
+article h2, article p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+____________________________________________
+CSS LESSON 29: 
+article{
+    text-decoration: overline;
+}
+
+a{
+    text-decoration: inherit;
+}
+
+a{
+    text-decoration: line-through;
+}
+
+a{
+    text-decoration: underline;
+}
+________________________________________________
+CSS LESSON 30: 
+h1{
+    font-weight: bold;
+}
+
+p{
+    font-weight: 500;
+    font-family: sans-serif;
+}
+________________________________________________
+CSS LESSON 31: 
+#header p{
+    text-transform: capitalize;
+}
+
+body > p{
+    text-transform: uppercase;
+}
+________________________________________________
+CSS LESSON 32: 
+#header h1{
+    color:goldenrod;  
+}
+
+#header h2{
+    color: #232cb1;
+}
+
+#header{
+    background:lightskyblue
+}
+_______________________________________________
+CSS LESSON 33: 
+a{
+    color: crimson;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+a:hover{
+    color:darkmagenta;
+    text-decoration:underline;
+    background-color: aquamarine;
+}
+________________________________________________
+CSS LESSON 34: 
+p{
+    font-size: 16px;
+    letter-spacing: 0.2em;
+    word-spacing: 4px;
+    line-height: 1.5em;
+}
+_______________________________________________
+CSS LESSON 35: 
+p{
+    font-size: 14px;
+    line-height: 2em;
+    margin-bottom: 32px;
+}
+_________________________________________________
+CSS LESSON 36: 
+.box{
+    margin: 30px;
+    padding: 30px;
+    border: 10px solid #000;
+    width: 200px;
+    height: 200px;
+    text-align:center;
+}
+_________________________________________________
+CSS LESSON 37: 
+
+
 
 
 */
